# csv-gen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark.sh  pyproject.toml
.github/: dependabot.yml
src/csv_gen/: __init__.py  __main__.py  cli.py  main.py  utils.py
src/csv_gen/app/: cli.py  main.py
src/csv_gen/app/algorithms/: __init__.py  np.py  python.py
src/csv_gen/app/algorithms/utils/: __init__.py  common.py  faker_utils.py  np_utils.py  rng.py
src/csv_gen/app/config/: __init__.py  config.py  logging.py
src/csv_gen/scripts/: advanced_statistics.py  benchmark_comparison.py  histogram.py  parametrized.py  plot_benchmark_comparison.py  plot_histogram.py  plot_parametrized.py  plot_progression.py  plot_whisker.py  progression.py  welch_ttest.py  whisker.py
src/csv_gen/utils/: np.py  python.py
