[project]
name = "csv-gen"
dynamic = [
    "version",
]
description = "Generate CSV files of arbitrary size with randomly generated fake data"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Laurens van der Tas", email = "laurens.vandertas@gmail.com" },
]
requires-python = ">=3.13,<3.14"

dependencies = [
    "cyclopts>=3.24.0",
    "faker>=37.6.0",
    "hatch-vcs",
    "hatchling>=1.27.0",
    "loguru>=0.7.3",
    "numpy>=2.1.3",
    "psutil>=7.0.0",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.9",
    "tqdm>=4.67.1",
]

[project.scripts]
csv-gen = "csv_gen.__main__:cli"

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "mccabe>=0.7.0",
    "pre-commit>=4.2.0",
    "pyment>=0.3.3",
    "ruff>=0.12.4",
    "yamlfix>=1.17.0",
]

test = [
    "pytest-cov>=6.2.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.1",
]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = [
    "hatch-vcs",
    "hatchling",
]
build-backend = "hatchling.build"

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py313"
line-length = 80

[tool.ruff.lint]
preview = true

select = [
    "ALL",
]

ignore = [
    "CPY", # copyright
    "D",   # pydocstyle
    "DOC", # pydoclint
    "I",   # isort
    "TD",  # comments TODO
]

extend-ignore = [
    "E501", # pycodestyle
    # bandit
    "B008", # flake8-builtins
    "N806", # pep8-naming
    "S404",
    "S603",
    "S607",

    # ruff plugins hygiene
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",  # trailing comma
    "ERA001",  # Found commented-out code
    "FIX002",  # fixme-style TODO
    "N803",    # Argument name should be lowercase
    "PGH003",
    "PGH004",
    "PLR0914", # flake8-refactor
]

fixable = [
    "ALL",
]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",
]
"**/scripts/*" = [
    "INP001",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80

[tool.yamlfix]
indentation = 2
quote_type = "single"
explicit_start = false
explicit_end = true
trim_trailing_spaces = true
comments_min_spaces_from_content = 2
whitelines = 1
comments_whitelines = 1
section_whitelines = 1
