[project]
name = "csv-gen"
dynamic = [
    "version",
]
description = "Generate CSV files of arbitrary size with randomly generated fake data"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Laurens van der Tas", email = "laurens.vandertas@gmail.com" },
]
requires-python = ">=3.13,<3.14"

dependencies = [
    "anywidget>=0.9.18",
    "cyclopts>=3.24.0",
    "faker>=37.11.0",
    "jupyter>=1.1.1",
    "kaleido>=1.1.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "plotly-geo>=1.0.0",
    "plotly>=6.3.1",
    "psutil>=7.1.0",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.scripts]
csv-gen = "csv_gen.__main__:cli"
advanced-statistics = "csv_gen.scripts.advanced_statistics:main"

[dependency-groups]
dev = [
    "basedpyright>=1.31.6",
    "hatch-vcs>=0.5.0",
    "hatchling>=1.27.0",
    "mccabe>=0.7.0",
    "pre-commit>=4.3.0",
    "pyment>=0.3.3",
    "ruff>=0.14.0",
    "yamlfix>=1.18.0",
]

test = [
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = [
    "hatch-vcs",
    "hatchling",
]
build-backend = "hatchling.build"

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py313"
line-length = 80

[tool.ruff.lint]
preview = true

select = [
    "ALL",
]

ignore = [
    "CPY", # copyright
    "D",   # pydocstyle
    "DOC", # pydoclint
    "I",   # isort
    "TD",  # comments TODO
]

extend-ignore = [
    "E501", # pycodestyle
    # bandit
    "B008", # flake8-builtins
    "N806", # pep8-naming
    "S404",
    "S603",
    "S607",

    # ruff plugins hygiene
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",  # trailing comma
    "ERA001",  # Found commented-out code
    "FIX002",  # fixme-style TODO
    "N803",    # Argument name should be lowercase
    "PGH003",
    "PGH004",
    "PLR0914", # flake8-refactor
]

fixable = [
    "ALL",
]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",
]
"**/scripts/*" = [
    "INP001",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80

[tool.yamlfix]
indentation = 2
quote_type = "single"
explicit_start = false
explicit_end = true
trim_trailing_spaces = true
comments_min_spaces_from_content = 2
whitelines = 1
comments_whitelines = 1
section_whitelines = 1
